# trading-bot

./: .env copy  .gitignore  README.md  analyze_rr_discrepancy.py  commands.txt  fix_python_setup.ps1  gj_issue.py  m_venv.sh  main.py  requirements.txt  rr_2.0.csv  test copy 2.py  test copy.py  test.py  test_multi_symbol.py  tune_parameters.py  validate_daily_rsi.py  w_venv.ps1  windows_commands.txt
ai-generated-scripts/: analyze_costs.py  compare_execution.py  debug_execution.py  debug_multi_symbol.py  diagnose_unrealistic_results.py  explain_multi_symbol_pnl.py  explain_rr.py  quick_verify.py  run_rr_comparison.sh  run_rr_tests.py  test_position_sizing.py  verify_backtest_realism.py  verify_pnl.py  verify_results.py  verify_trades.py
data/: AUDCHF._H1_2024-01-01_2025-10-22.csv  AUDCHF._H1_2025-01-01_2025-09-22.csv  AUDCHF._H1_2025-12-01_2025-12-17.csv  AUDCHF._H1_2025-12-01_2025-12-18.csv  AUDCHF._H1_2025-12-01_2025-12-19.csv  AUDCHF._H1_2025-12-01_2025-12-20.csv  AUDCHF._H4_2025-01-01_2025-09-22.csv  AUDCHF._M15_2025-01-01_2025-09-22.csv  AUDCHF._M5_2025-01-01_2025-09-22.csv  AUDCHF._M5_2025-12-01_2025-12-17.csv  EURCHF._H1_2024-01-01_2025-10-22.csv  EURUSD._H1_2024-01-01_2025-10-22.csv  EURUSD._H1_2025-12-01_2025-12-16.csv  EURUSD._H1_2025-12-01_2025-12-18.csv  EURUSD._H1_2025-12-01_2026-01-18.csv  GBPAUD._H1_2025-01-01_2025-12-15.csv  GBPAUD._H1_2025-12-01_2025-12-15.csv  GBPAUD._H1_2025-12-01_2025-12-18.csv  GBPAUD._H1_2025-12-01_2025-12-19.csv  GBPAUD._H1_2025-12-01_2025-12-20.csv  GBPAUD_H1_2025-12-01_2025-12-20.csv  GBPCAD._H1_2024-01-01_2025-10-22.csv  GBPJPY._H1_2024-01-01_2025-10-22.csv  GBPJPY._M15_2025-12-01_2025-12-21.csv  SOLUSD._H1_2024-01-01_2025-10-22.csv  SOLUSD._H1_2025-12-01_2026-01-18.csv  XAGUSD._H1_2025-12-01_2026-01-18.csv  XAGUSD._H1_2026-01-01_2026-01-18.csv  XAUUSD._H1_2025-12-01_2026-01-18.csv  XAUUSD._M30_2025-01-01_2025-09-22.csv  XAUUSD._M5_2025-01-01_2025-09-22.csv  fetch.py  fetch_client.py  fetch_constants.py  fetch_server.py
data/backtests/: EURGBP._H1_2025-10-01_2026-01-18.csv  EURGBP._H1_2025-12-01_2026-01-18.csv  EURUSD._H1_2025-12-01_2025-12-16.csv  EURUSD._H1_2025-12-01_2026-01-18.csv  GBPJPY._H1_2024-01-01_2025-10-22.csv  GBPJPY._H1_2025-12-01_2026-01-08.csv  GBPJPY._M15_2025-12-01_2025-12-21.csv  GBPJPY._M15_2025-12-01_2026-01-08.csv  SOLUSD._H1_2025-10-01_2026-01-18.csv  SOLUSD._H1_2025-12-01_2026-01-18.csv  (+7 more)
docs/: CHART_DATA_SYSTEM.md  DAILY_RSI.md  DYNAMIC_CHART_OVERLAYS.md  LIVE_TRADING_RESTRUCTURE.md  PARAMETER_TUNING.md  REACT_APP_DASHBOARD.md  Zones_validation.md  live-trading-next-fix.md  margin-issue-summary.md  view_trades_example.py
examples/: examples.txt
fastapi-app/: .env.example  MIGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  run_live.py  run_live_simple.py
fastapi-app/app/api/: __init__.py  backtests.py  deps.py  live_data.py
fastapi-app/app/core/: config.py
fastapi-app/app/models/: schemas.py
fastapi-app/app/services/: job_store.py  live_data_manager.py  live_store.py  params.py  presets_store.py
fastapi-app/app/utils/: file_utils.py
fastapi-app/app/websocket/: __init__.py  connection_manager.py  handlers.py
fastapi-app/tests/: conftest.py  test_api.py  test_integration.py  test_models.py  test_services.py  test_websocket.py
ml/: AiOrderFilter.py  analyze_data_quality.py  gemini-proposal.md  merge_train_dataset.py  order_filter_features.py  predict_example.py  train_model.py
notebooks/: backtesting.ipynb  failed_order_due_to_weekend.ipynb  order_failure.ipynb  wip.html  wip.ipynb  zones.html  zones_local.html
react-app/: README.md  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-app/: .gitignore  README.md  manage.py  requirements.txt
(+145 files in other folders)
